tests/baselines/reference/typeFromPrototypeAssignment.errors.txt
tests/cases/conformance/salsa/a.js(7,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(8,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(9,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(15,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(16,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(17,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(21,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(22,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(23,9): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(27,20): error TS2339: Property 'addon' does not exist on type '{ set: () => void; get(): void; }'.
tests/cases/conformance/salsa/a.js(29,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(30,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(31,5): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(36,1): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(37,1): error TS2823: This expression refers to function. Did you mean to call it instead?
tests/cases/conformance/salsa/a.js(38,1): error TS2823: This expression refers to function. Did you mean to call it instead?


==== tests/cases/conformance/salsa/a.js (16 errors) ====
    // all references to _map, set, get, addon should be ok
    
    /** @constructor */
    var Multimap = function() {
        this._map = {};
        this._map
        this.set
        ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        this.get
        ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        this.addon
        ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
    };
    
    Multimap.prototype = {
        set: function() {
            this._map
            this.set
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.get
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.addon
            ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        },
        get() {
            this._map
            this.set
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.get
            ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
            this.addon
            ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        }
    }
    
    Multimap.prototype.addon = function () {
                       ~~~~~
!!! error TS2339: Property 'addon' does not exist on type '{ set: () => void; get(): void; }'.
        this._map
        this.set
        ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        this.get
        ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
        this.addon
        ~~~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
    }
    
    var mm = new Multimap();
    mm._map
    mm.set
    ~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
    mm.get
    ~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
    mm.addon
    ~~~~~~~~
!!! error TS2823: This expression refers to function. Did you mean to call it instead?
    